Add Beatroot code by Simon Dixon for beat detection in MIDI files
1. Passing of objects by values into functions
   were replaced by passing them by reference, where it is worth it.
2. Code style was reformatted according to the MuseScore style

Reformat Beatroot code style

--- a/mscore/CMakeLists.txt
+++ b/mscore/CMakeLists.txt
@@ -297,6 +297,7 @@ target_link_libraries(mscore
       fluid
       effects
       vorbisfile
+      beatroot
       )
 if (ZERBERUS)
       target_link_libraries(mscore zerberus synthesizer)
